Moved libgfl to its own dir
git-svn-id: https://svn.code.sf.net/p/shareaza/code/trunk@6159 3231ed4b-2112-0410-84e0-8c3944a40730

--- a/vc7_1/GFLImageServices.vcproj
+++ b/vc7_1/GFLImageServices.vcproj
@@ -60,9 +60,9 @@
 				Name="VCPostBuildEventTool"/>
 			<Tool
 				Name="VCPreBuildEventTool"
-				Description="Copying libgfl267.dll..."
-				CommandLine="copy &quot;$(SolutionDir)..\plugins\$(TargetName)\$(ConfigurationName)\libgfl267.dll&quot; &quot;$(SolutionDir)$(ConfigurationName)\&quot; /y
-copy &quot;$(SolutionDir)..\plugins\$(TargetName)\$(ConfigurationName)\libgfl267.dll&quot; &quot;$(TargetDir)&quot; /y
+				Description="Copying the LibGFL dll..."
+				CommandLine="copy &quot;$(SolutionDir)..\plugins\LibGFL\$(ConfigurationName)\libgfl*.dll&quot; &quot;$(SolutionDir)$(ConfigurationName)\&quot; /y
+copy &quot;$(SolutionDir)..\plugins\LibGFL\$(ConfigurationName)\libgfl*.dll&quot; &quot;$(TargetDir)&quot; /y
 "/>
 			<Tool
 				Name="VCPreLinkEventTool"/>
@@ -142,9 +142,9 @@ copy &quot;$(SolutionDir)..\plugins\$(TargetName)\$(ConfigurationName)\libgfl267
 				Name="VCPostBuildEventTool"/>
 			<Tool
 				Name="VCPreBuildEventTool"
-				Description="Copying libgfl267.dll..."
-				CommandLine="copy &quot;$(SolutionDir)..\plugins\$(TargetName)\$(ConfigurationName)\libgfl267.dll&quot; &quot;$(SolutionDir)$(ConfigurationName)\&quot; /y
-copy &quot;$(SolutionDir)..\plugins\$(TargetName)\$(ConfigurationName)\libgfl267.dll&quot; &quot;$(TargetDir)&quot; /y
+				Description="Copying the LibGFL dll..."
+				CommandLine="copy &quot;$(SolutionDir)..\plugins\LibGFL\$(ConfigurationName)\libgfl*.dll&quot; &quot;$(SolutionDir)$(ConfigurationName)\&quot; /y
+copy &quot;$(SolutionDir)..\plugins\LibGFL\$(ConfigurationName)\libgfl*.dll&quot; &quot;$(TargetDir)&quot; /y
 "/>
 			<Tool
 				Name="VCPreLinkEventTool"/>
