Fixed the debug build of the setup.
git-svn-id: https://svn.code.sf.net/p/shareaza/code/trunk@6177 3231ed4b-2112-0410-84e0-8c3944a40730

--- a/vc7_1/Installer.vcproj
+++ b/vc7_1/Installer.vcproj
@@ -3,7 +3,8 @@
 	ProjectType="Visual C++"
 	Version="7.10"
 	Name="Installer"
-	ProjectGUID="{13C7CBBC-B681-4D81-8878-E2EA1F47022D}">
+	ProjectGUID="{13C7CBBC-B681-4D81-8878-E2EA1F47022D}"
+	RootNamespace="Installer">
 	<Platforms>
 		<Platform
 			Name="Win32"/>
@@ -19,8 +20,8 @@
 			<Tool
 				Name="VCCustomBuildTool"
 				Description="Making Installer..."
-				CommandLine="call MakeInstaller.bat &quot;$(ConfigurationName)&quot; &gt; nul
-"/>
+				CommandLine="call MakeInstaller.bat &quot;$(ConfigurationName)&quot;"
+				Outputs="$(SolutionDir)..\setup\builds\Shareaza_Debug_*.exe"/>
 			<Tool
 				Name="VCLinkerTool"/>
 			<Tool
