--- a/vc8_0/GeoIP.vcproj
+++ b/vc8_0/GeoIP.vcproj
@@ -19,10 +19,9 @@
 	<Configurations>
 		<Configuration
 			Name="Debug|Win32"
-			OutputDirectory="$(SolutionDir)$(ConfigurationName)$(PlatformName)"
-			IntermediateDirectory="$(SolutionDir)$(ConfigurationName)$(PlatformName)"
-			ConfigurationType="1"
-			InheritedPropertySheets="$(VCInstallDir)VCProjectDefaults\UpgradeFromVC71.vsprops"
+			OutputDirectory="$(SolutionDir)$(ConfigurationName)$(PlatformName)\"
+			IntermediateDirectory="$(OutDir)$(ProjectName)"
+			ConfigurationType="2"
 			>
 			<Tool
 				Name="VCPreBuildEventTool"
@@ -30,8 +29,8 @@
 			<Tool
 				Name="VCCustomBuildTool"
 				Description="Copying $(ProjectName) files..."
-				CommandLine="copy &quot;$(SolutionDir)..\GeoIP\geoip.dll&quot; &quot;$(SolutionDir)$(ConfigurationName)$(PlatformName)\geoip.dll&quot; /y&#x0D;&#x0A;copy &quot;$(SolutionDir)..\GeoIP\data\GeoIP.dat&quot; &quot;$(SolutionDir)$(ConfigurationName)$(PlatformName)\GeoIP.dat&quot; /y"
-				Outputs="&quot;$(SolutionDir)$(ConfigurationName)$(PlatformName)\geoip.dll&quot;;&quot;$(SolutionDir)$(ConfigurationName)$(PlatformName)\GeoIP.dat&quot;"
+				CommandLine="copy &quot;$(SolutionDir)..\GeoIP\data\GeoIP.dat&quot; &quot;$(OutDir)GeoIP.dat&quot;&#x0D;&#x0A;"
+				Outputs="&quot;$(OutDir)GeoIP.dat&quot;"
 			/>
 			<Tool
 				Name="VCXMLDataGeneratorTool"
@@ -44,6 +43,15 @@
 			/>
 			<Tool
 				Name="VCCLCompilerTool"
+				Optimization="0"
+				PreprocessorDefinitions="WIN32;_DEBUG;_WINDOWS;_USRDLL;DLL;_CRT_SECURE_NO_DEPRECATE"
+				MinimalRebuild="true"
+				BasicRuntimeChecks="3"
+				SmallerTypeCheck="true"
+				RuntimeLibrary="1"
+				ProgramDataBaseFileName="$(TargetDir)$(TargetName).pdb"
+				WarningLevel="3"
+				DebugInformationFormat="4"
 			/>
 			<Tool
 				Name="VCManagedResourceCompilerTool"
@@ -56,7 +64,10 @@
 			/>
 			<Tool
 				Name="VCLinkerTool"
-				OutputFile=""
+				AdditionalDependencies="ws2_32.lib unicows.lib kernel32.lib advapi32.lib user32.lib gdi32.lib shell32.lib comdlg32.lib version.lib mpr.lib rasapi32.lib winmm.lib winspool.lib vfw32.lib secur32.lib oleacc.lib oledlg.lib sensapi.lib"
+				OutputFile="$(OutDir)$(ProjectName).dll"
+				IgnoreDefaultLibraryNames="kernel32.lib;advapi32.lib;user32.lib;gdi32.lib;shell32.lib;comdlg32.lib;version.lib;mpr.lib;rasapi32.lib;winmm.lib;winspool.lib;vfw32.lib;secur32.lib;oleacc.lib;oledlg.lib;sensapi.lib"
+				GenerateDebugInformation="true"
 			/>
 			<Tool
 				Name="VCALinkTool"
@@ -81,16 +92,13 @@
 			/>
 			<Tool
 				Name="VCPostBuildEventTool"
-				Description=""
-				CommandLine=""
 			/>
 		</Configuration>
 		<Configuration
 			Name="Debug|x64"
-			OutputDirectory="$(SolutionDir)$(ConfigurationName)$(PlatformName)\plugins\$(ProjectName)"
-			IntermediateDirectory="$(SolutionDir)$(ConfigurationName)$(PlatformName)\plugins\$(ProjectName)"
-			ConfigurationType="1"
-			InheritedPropertySheets="$(VCInstallDir)VCProjectDefaults\UpgradeFromVC71.vsprops"
+			OutputDirectory="$(SolutionDir)$(ConfigurationName)$(PlatformName)\"
+			IntermediateDirectory="$(OutDir)$(ProjectName)"
+			ConfigurationType="2"
 			>
 			<Tool
 				Name="VCPreBuildEventTool"
@@ -98,8 +106,8 @@
 			<Tool
 				Name="VCCustomBuildTool"
 				Description="Copying $(ProjectName) files..."
-				CommandLine="xcopy &quot;$(SolutionDir)..\GeoIP\geoip.dll&quot; &quot;$(SolutionDir)$(ConfigurationName)$(PlatformName)\geoip.dll&quot; /y&#x0D;&#x0A;xcopy &quot;$(SolutionDir)..\GeoIP\data\GeoIP.dat&quot; &quot;$(SolutionDir)$(ConfigurationName)$(PlatformName)\GeoIP.dat&quot; /y"
-				Outputs="&quot;$(SolutionDir)$(ConfigurationName)$(PlatformName)\geoip.dll&quot;;&quot;$(SolutionDir)$(ConfigurationName)$(PlatformName)\GeoIP.dat&quot;"
+				CommandLine="copy &quot;$(SolutionDir)..\GeoIP\data\GeoIP.dat&quot; &quot;$(OutDir)GeoIP.dat&quot;&#x0D;&#x0A;"
+				Outputs="&quot;$(OutDir)GeoIP.dat&quot;"
 			/>
 			<Tool
 				Name="VCXMLDataGeneratorTool"
@@ -109,10 +117,18 @@
 			/>
 			<Tool
 				Name="VCMIDLTool"
-				TargetEnvironment="3"
 			/>
 			<Tool
 				Name="VCCLCompilerTool"
+				Optimization="0"
+				PreprocessorDefinitions="WIN64;WIN32;_DEBUG;_WINDOWS;_USRDLL;DLL;_CRT_SECURE_NO_DEPRECATE"
+				MinimalRebuild="true"
+				BasicRuntimeChecks="3"
+				SmallerTypeCheck="true"
+				RuntimeLibrary="1"
+				ProgramDataBaseFileName="$(TargetDir)$(TargetName).pdb"
+				WarningLevel="3"
+				DebugInformationFormat="3"
 			/>
 			<Tool
 				Name="VCManagedResourceCompilerTool"
@@ -125,6 +141,10 @@
 			/>
 			<Tool
 				Name="VCLinkerTool"
+				AdditionalDependencies="ws2_32.lib"
+				OutputFile="$(OutDir)$(ProjectName).dll"
+				GenerateDebugInformation="true"
+				TargetMachine="17"
 			/>
 			<Tool
 				Name="VCALinkTool"
@@ -149,16 +169,15 @@
 			/>
 			<Tool
 				Name="VCPostBuildEventTool"
-				Description=""
-				CommandLine=""
 			/>
 		</Configuration>
 		<Configuration
 			Name="Release|Win32"
-			OutputDirectory="$(SolutionDir)$(ConfigurationName)$(PlatformName)"
-			IntermediateDirectory="$(SolutionDir)$(ConfigurationName)$(PlatformName)"
-			ConfigurationType="1"
-			InheritedPropertySheets="$(VCInstallDir)VCProjectDefaults\UpgradeFromVC71.vsprops"
+			OutputDirectory="$(SolutionDir)$(ConfigurationName)$(PlatformName)\"
+			IntermediateDirectory="$(OutDir)$(ProjectName)"
+			ConfigurationType="2"
+			UseOfMFC="2"
+			WholeProgramOptimization="1"
 			>
 			<Tool
 				Name="VCPreBuildEventTool"
@@ -166,8 +185,8 @@
 			<Tool
 				Name="VCCustomBuildTool"
 				Description="Copying $(ProjectName) files..."
-				CommandLine="copy &quot;$(SolutionDir)..\GeoIP\geoip.dll&quot; &quot;$(SolutionDir)$(ConfigurationName)$(PlatformName)\geoip.dll&quot; /y&#x0D;&#x0A;copy &quot;$(SolutionDir)..\GeoIP\data\GeoIP.dat&quot; &quot;$(SolutionDir)$(ConfigurationName)$(PlatformName)\GeoIP.dat&quot; /y"
-				Outputs="&quot;$(SolutionDir)$(ConfigurationName)$(PlatformName)\geoip.dll&quot;;&quot;$(SolutionDir)$(ConfigurationName)$(PlatformName)\GeoIP.dat&quot;"
+				CommandLine="copy &quot;$(SolutionDir)..\GeoIP\data\GeoIP.dat&quot; &quot;$(OutDir)GeoIP.dat&quot;&#x0D;&#x0A;"
+				Outputs="&quot;$(OutDir)GeoIP.dat&quot;"
 			/>
 			<Tool
 				Name="VCXMLDataGeneratorTool"
@@ -180,6 +199,12 @@
 			/>
 			<Tool
 				Name="VCCLCompilerTool"
+				PreprocessorDefinitions="WIN32;NDEBUG;_WINDOWS;_USRDLL;DLL;_CRT_SECURE_NO_DEPRECATE"
+				MinimalRebuild="true"
+				RuntimeLibrary="2"
+				ProgramDataBaseFileName="$(TargetDir)$(TargetName).pdb"
+				WarningLevel="3"
+				DebugInformationFormat="3"
 			/>
 			<Tool
 				Name="VCManagedResourceCompilerTool"
@@ -192,7 +217,13 @@
 			/>
 			<Tool
 				Name="VCLinkerTool"
-				OutputFile=""
+				AdditionalDependencies="ws2_32.lib unicows.lib kernel32.lib advapi32.lib user32.lib gdi32.lib shell32.lib comdlg32.lib version.lib mpr.lib rasapi32.lib winmm.lib winspool.lib vfw32.lib secur32.lib oleacc.lib oledlg.lib sensapi.lib"
+				OutputFile="$(OutDir)$(ProjectName).dll"
+				IgnoreDefaultLibraryNames="kernel32.lib;advapi32.lib;user32.lib;gdi32.lib;shell32.lib;comdlg32.lib;version.lib;mpr.lib;rasapi32.lib;winmm.lib;winspool.lib;vfw32.lib;secur32.lib;oleacc.lib;oledlg.lib;sensapi.lib"
+				GenerateDebugInformation="true"
+				OptimizeReferences="2"
+				EnableCOMDATFolding="2"
+				OptimizeForWindows98="1"
 			/>
 			<Tool
 				Name="VCALinkTool"
@@ -217,16 +248,14 @@
 			/>
 			<Tool
 				Name="VCPostBuildEventTool"
-				Description=""
-				CommandLine=""
 			/>
 		</Configuration>
 		<Configuration
 			Name="Release|x64"
-			OutputDirectory="$(SolutionDir)$(ConfigurationName)$(PlatformName)\plugins\$(ProjectName)"
-			IntermediateDirectory="$(SolutionDir)$(ConfigurationName)$(PlatformName)\plugins\$(ProjectName)"
-			ConfigurationType="1"
-			InheritedPropertySheets="$(VCInstallDir)VCProjectDefaults\UpgradeFromVC71.vsprops"
+			OutputDirectory="$(SolutionDir)$(ConfigurationName)$(PlatformName)\"
+			IntermediateDirectory="$(OutDir)$(ProjectName)"
+			ConfigurationType="2"
+			WholeProgramOptimization="1"
 			>
 			<Tool
 				Name="VCPreBuildEventTool"
@@ -234,8 +263,8 @@
 			<Tool
 				Name="VCCustomBuildTool"
 				Description="Copying $(ProjectName) files..."
-				CommandLine="xcopy &quot;$(SolutionDir)..\GeoIP\geoip.dll&quot; &quot;$(SolutionDir)$(ConfigurationName)$(PlatformName)\geoip.dll&quot; /y&#x0D;&#x0A;xcopy &quot;$(SolutionDir)..\GeoIP\data\GeoIP.dat&quot; &quot;$(SolutionDir)$(ConfigurationName)$(PlatformName)\GeoIP.dat&quot; /y"
-				Outputs="&quot;$(SolutionDir)$(ConfigurationName)$(PlatformName)\geoip.dll&quot;;&quot;$(SolutionDir)$(ConfigurationName)$(PlatformName)\GeoIP.dat&quot;"
+				CommandLine="copy &quot;$(SolutionDir)..\GeoIP\data\GeoIP.dat&quot; &quot;$(OutDir)GeoIP.dat&quot;&#x0D;&#x0A;"
+				Outputs="&quot;$(OutDir)GeoIP.dat&quot;"
 			/>
 			<Tool
 				Name="VCXMLDataGeneratorTool"
@@ -245,10 +274,14 @@
 			/>
 			<Tool
 				Name="VCMIDLTool"
-				TargetEnvironment="3"
 			/>
 			<Tool
 				Name="VCCLCompilerTool"
+				PreprocessorDefinitions="WIN64;WIN32;NDEBUG;_WINDOWS;_USRDLL;DLL;_CRT_SECURE_NO_DEPRECATE"
+				MinimalRebuild="true"
+				ProgramDataBaseFileName="$(TargetDir)$(TargetName).pdb"
+				WarningLevel="3"
+				DebugInformationFormat="3"
 			/>
 			<Tool
 				Name="VCManagedResourceCompilerTool"
@@ -261,6 +294,13 @@
 			/>
 			<Tool
 				Name="VCLinkerTool"
+				AdditionalDependencies="ws2_32.lib"
+				OutputFile="$(OutDir)$(ProjectName).dll"
+				GenerateDebugInformation="true"
+				OptimizeReferences="2"
+				EnableCOMDATFolding="2"
+				OptimizeForWindows98="1"
+				TargetMachine="17"
 			/>
 			<Tool
 				Name="VCALinkTool"
@@ -285,14 +325,28 @@
 			/>
 			<Tool
 				Name="VCPostBuildEventTool"
-				Description=""
-				CommandLine=""
 			/>
 		</Configuration>
 	</Configurations>
 	<References>
 	</References>
 	<Files>
+		<Filter
+			Name="Source Files"
+			>
+			<File
+				RelativePath="..\GeoIP\libGeoIP\GeoIP.c"
+				>
+			</File>
+		</Filter>
+		<Filter
+			Name="Header Files"
+			>
+			<File
+				RelativePath="..\GeoIP\libGeoIP\GeoIP.h"
+				>
+			</File>
+		</Filter>
 	</Files>
 	<Globals>
 	</Globals>
