Don't add debug information to release dlls Fix for paths with spaces
git-svn-id: https://svn.code.sf.net/p/shareaza/code/trunk@6218 3231ed4b-2112-0410-84e0-8c3944a40730

--- a/vc8_0/DocumentReader.vcproj
+++ b/vc8_0/DocumentReader.vcproj
@@ -26,8 +26,8 @@
 			>
 			<Tool
 				Name="VCCustomBuildTool"
-				Description="Copying zlibwapi.dll..."
-				CommandLine="xcopy $(SolutionDir)$(ConfigurationName)$(PlatformName)\zlibwapi.dll $(OutDir) /y /q&#x0D;&#x0A;"
+				Description="Copying zlibwapi dll..."
+				CommandLine="xcopy &quot;$(SolutionDir)$(ConfigurationName)$(PlatformName)\zlibwapi.dll&quot; &quot;$(OutDir)&quot; /y /q&#x0D;&#x0A;"
 				Outputs="$(OutDir)zlibwapi.dll"
 				ExecutionBucket="1"
 			/>
@@ -121,8 +121,8 @@
 			>
 			<Tool
 				Name="VCCustomBuildTool"
-				Description="Copying zlibwapi.dll..."
-				CommandLine="xcopy $(SolutionDir)$(ConfigurationName)$(PlatformName)\zlibwapi.dll $(OutDir) /y /q&#x0D;&#x0A;"
+				Description="Copying zlibwapi dll..."
+				CommandLine="xcopy &quot;$(SolutionDir)$(ConfigurationName)$(PlatformName)\zlibwapi.dll&quot; &quot;$(OutDir)&quot; /y /q&#x0D;&#x0A;"
 				Outputs="$(OutDir)zlibwapi.dll"
 				ExecutionBucket="1"
 			/>
@@ -217,8 +217,8 @@
 			>
 			<Tool
 				Name="VCCustomBuildTool"
-				Description="Copying zlibwapi.dll..."
-				CommandLine="xcopy $(SolutionDir)$(ConfigurationName)$(PlatformName)\zlibwapi.dll $(OutDir) /y /q&#x0D;&#x0A;"
+				Description="Copying zlibwapi dll..."
+				CommandLine="xcopy &quot;$(SolutionDir)$(ConfigurationName)$(PlatformName)\zlibwapi.dll&quot; &quot;$(OutDir)&quot; /y /q&#x0D;&#x0A;"
 				Outputs="$(OutDir)zlibwapi.dll"
 				ExecutionBucket="1"
 			/>
@@ -272,7 +272,6 @@
 				OutputFile="$(OutDir)$(ProjectName).dll"
 				IgnoreDefaultLibraryNames="kernel32.lib;advapi32.lib;user32.lib;gdi32.lib;shell32.lib;comdlg32.lib;version.lib;mpr.lib;rasapi32.lib;winmm.lib;winspool.lib;vfw32.lib;secur32.lib;oleacc.lib;oledlg.lib;sensapi.lib"
 				ModuleDefinitionFile="&quot;$(SolutionDir)..\plugins\$(ProjectName)\$(ProjectName).def&quot;"
-				GenerateDebugInformation="true"
 				OptimizeReferences="2"
 				EnableCOMDATFolding="2"
 				OptimizeForWindows98="1"
@@ -314,8 +313,8 @@
 			>
 			<Tool
 				Name="VCCustomBuildTool"
-				Description="Copying zlibwapi.dll..."
-				CommandLine="xcopy $(SolutionDir)$(ConfigurationName)$(PlatformName)\zlibwapi.dll $(OutDir) /y /q&#x0D;&#x0A;"
+				Description="Copying zlibwapi dll..."
+				CommandLine="xcopy &quot;$(SolutionDir)$(ConfigurationName)$(PlatformName)\zlibwapi.dll&quot; &quot;$(OutDir)&quot; /y /q&#x0D;&#x0A;"
 				Outputs="$(OutDir)zlibwapi.dll"
 				ExecutionBucket="1"
 			/>
@@ -367,7 +366,6 @@
 				RegisterOutput="true"
 				OutputFile="$(OutDir)$(ProjectName).dll"
 				ModuleDefinitionFile="&quot;$(SolutionDir)..\plugins\$(ProjectName)\$(ProjectName).def&quot;"
-				GenerateDebugInformation="true"
 				OptimizeReferences="2"
 				EnableCOMDATFolding="2"
 				OptimizeForWindows98="1"
@@ -406,6 +404,7 @@
 		<Filter
 			Name="Source Files"
 			Filter="cpp;c;cxx;def;odl;idl;hpj;bat;asm;asmx"
+			UniqueIdentifier="{4FC737F1-C7A5-4376-A066-2A32D752A2FF}"
 			>
 			<File
 				RelativePath="..\plugins\DocumentReader\ClassFactory.cpp"
@@ -511,6 +510,7 @@
 		<Filter
 			Name="Header Files"
 			Filter="h;hpp;hxx;hm;inl;inc;xsd"
+			UniqueIdentifier="{93995380-89BD-4b04-88EB-625FBE52EBFB}"
 			>
 			<File
 				RelativePath="..\plugins\DocumentReader\DocReader.h"
@@ -536,6 +536,7 @@
 		<Filter
 			Name="Resource Files"
 			Filter="rc;ico;cur;bmp;dlg;rc2;rct;bin;rgs;gif;jpg;jpeg;jpe;resx"
+			UniqueIdentifier="{67DA6AB6-F800-4c08-8B7A-83BB121AAD01}"
 			>
 			<File
 				RelativePath="..\plugins\DocumentReader\DocReader.rgs"
@@ -553,42 +554,6 @@
 		<Filter
 			Name="Generated Fíles"
 			>
-			<File
-				RelativePath=".\Debugx64\plugins\DocumentReader\DocumentReader_i.c"
-				>
-				<FileConfiguration
-					Name="Debug|Win32"
-					ExcludedFromBuild="true"
-					>
-					<Tool
-						Name="VCCLCompilerTool"
-					/>
-				</FileConfiguration>
-				<FileConfiguration
-					Name="Debug|x64"
-					>
-					<Tool
-						Name="VCCLCompilerTool"
-						UsePrecompiledHeader="0"
-					/>
-				</FileConfiguration>
-				<FileConfiguration
-					Name="Release|Win32"
-					ExcludedFromBuild="true"
-					>
-					<Tool
-						Name="VCCLCompilerTool"
-					/>
-				</FileConfiguration>
-				<FileConfiguration
-					Name="Release|x64"
-					ExcludedFromBuild="true"
-					>
-					<Tool
-						Name="VCCLCompilerTool"
-					/>
-				</FileConfiguration>
-			</File>
 			<File
 				RelativePath=".\Releasex64\plugins\DocumentReader\DocumentReader_i.c"
 				>
@@ -678,6 +643,42 @@
 					>
 					<Tool
 						Name="VCCLCompilerTool"
+					/>
+				</FileConfiguration>
+				<FileConfiguration
+					Name="Release|Win32"
+					ExcludedFromBuild="true"
+					>
+					<Tool
+						Name="VCCLCompilerTool"
+					/>
+				</FileConfiguration>
+				<FileConfiguration
+					Name="Release|x64"
+					ExcludedFromBuild="true"
+					>
+					<Tool
+						Name="VCCLCompilerTool"
+					/>
+				</FileConfiguration>
+			</File>
+			<File
+				RelativePath=".\Debugx64\plugins\DocumentReader\DocumentReader_i.c"
+				>
+				<FileConfiguration
+					Name="Debug|Win32"
+					ExcludedFromBuild="true"
+					>
+					<Tool
+						Name="VCCLCompilerTool"
+					/>
+				</FileConfiguration>
+				<FileConfiguration
+					Name="Debug|x64"
+					>
+					<Tool
+						Name="VCCLCompilerTool"
+						UsePrecompiledHeader="0"
 					/>
 				</FileConfiguration>
 				<FileConfiguration
